add getNode function

--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <title>Document</title>
 </head>
 <body>
+  <div id="marquee"></div>
+
   
   <script src="dist/simple-marquee.min.js"></script>
+
+  <script>
+    SimpleMarquee.create('#marquee')
+  </script>
 </body>
 </html>
